--- a/src/snippets/lightly-single-variant-product-images.liquid
+++ b/src/snippets/lightly-single-variant-product-images.liquid
@@ -1,3 +1,13 @@
+{% comment %} 
+  
+  -----------------------------------------------------------------------------
+  Single Variant Product Images
+  More info: https://lightly-digital/docs/single-product-variant-images
+
+  Copyright 2021 Lightly Digital - support@lightly.digital
+  -----------------------------------------------------------------------------
+
+{% endcomment %}
 {% assign active_swatch_count = 0 %}
   {% for variant in product.variants %}
     {% if variant.available %}
