--- a/src/snippets/lightly-slideshow-pagination.liquid
+++ b/src/snippets/lightly-slideshow-pagination.liquid
@@ -2,6 +2,9 @@
 
   -----------------------------------------------------------------------------
   Slideshow Pagination
+  More info: https://lightly-digital/docs/slideshow-pagination
+
+  Copyright 2021 Lightly Digital - support@lightly.digital
   -----------------------------------------------------------------------------
 
 {% endcomment %}
