--- a/src/assets/ec-base-styles.scss.liquid
+++ b/src/assets/ec-base-styles.scss.liquid
@@ -2,7 +2,7 @@
 //
 //
 
-$ec-prefix: {{ settings.ec_prefix }} !default;
+$ec-prefix: {{ settings.lightly_prefix }} !default;
 
 // Color system
 
@@ -178,12 +178,20 @@ $headings-font-weight: 500 !default;
 $headings-line-height: 1.2 !default;
 $headings-color: null !default;
 
-$display-font-size-1: 5rem !default;
-$display-font-size-2: 4.5rem !default;
-$display-font-size-3: 4rem !default;
-$display-font-size-4: 3.5rem !default;
-$display-font-size-5: 3rem !default;
-$display-font-size-6: 2.5rem !default;
+$display-font-size-1: 3.75rem !default;
+$display-font-size-2: 3rem !default;
+$display-font-size-3: 2.25rem !default;
+$display-font-size-4: 1.75rem !default;
+$display-font-size-5: 1.5rem !default;
+$display-font-size-6: 1rem !default;
+
+$display-font-size-1-md: 4.5rem !default;
+$display-font-size-2-md: 4rem !default;
+$display-font-size-3-md: 4rem !default;
+$display-font-size-4-md: 3.5rem !default;
+$display-font-size-5-md: 3rem !default;
+$display-font-size-6-md: 2.5rem !default;
+
 
 $display-font-weight: 300 !default;
 $display-line-height: $headings-line-height !default;
@@ -269,6 +277,8 @@ $badge-border-radius: $border-radius !default;
 .#{$ec-prefix}col-11,
 .#{$ec-prefix}col-12 {
   flex: 0 0 auto;
+  padding-right: $gutter-x / 2;
+  padding-left: $gutter-x / 2;  
 }
 
 .#{$ec-prefix}col-1 { width: 8.333333%; }
@@ -311,6 +321,8 @@ $badge-border-radius: $border-radius !default;
   .#{$ec-prefix}col-md-11,
   .#{$ec-prefix}col-md-12 {
     flex: 0 0 auto;
+    padding-right: $gutter-x / 2;
+    padding-left: $gutter-x / 2;
   }
 
   .#{$ec-prefix}col-md-1 { width: 8.333333%; }
@@ -1836,6 +1848,27 @@ $badge-border-radius: $border-radius !default;
   font-size: $display-font-size-6 !important;
 }
 
+@media (min-width: $grid-breakpoint-md) {
+  .#{$ec-prefix}display-1 {
+    font-size: $display-font-size-1-md !important;
+  }
+  .#{$ec-prefix}display-2 {
+    font-size: $display-font-size-2-md !important;
+  }
+  .#{$ec-prefix}display-3 {
+    font-size: $display-font-size-3-md !important;
+  }
+  .#{$ec-prefix}display-4 {
+    font-size: $display-font-size-4-md !important;
+  }
+  .#{$ec-prefix}display-5 {
+    font-size: $display-font-size-5-md !important;
+  }
+  .#{$ec-prefix}display-6 {
+    font-size: $display-font-size-6-md !important;
+  }  
+}
+
 // Badge
 .#{$ec-prefix}badge {
   display: inline-block;
@@ -2343,6 +2376,3 @@ $badge-border-radius: $border-radius !default;
   }
 }
 
-body {
-  background-color: $gray-300 !important;
-}
