--- a/src/snippets/lightly-article-card.liquid
+++ b/src/snippets/lightly-article-card.liquid
@@ -1,7 +1,11 @@
 {%- comment %}
-
+  
+  -----------------------------------------------------------------------------
   Article Card
-  ------------------------------------------------------------------------------
+  More info: https://lightly-digital/docs/article-card
+
+  Copyright 2021 Lightly Digital - support@lightly.digital
+  -----------------------------------------------------------------------------
 
   Usage:
 
@@ -17,7 +21,7 @@
         <a href="{{ article.url }}">
           {% assign image = article.image.src | img_url: '400x' %}
           {% assign image_alt_text = article.image.alt %}
-          {% render 'image-object'
+          {% render 'lightly-image-object'
             image_url: image,
             image_url_md_up: image,
             image_alt_text: image_alt_text,
